# bitwarden-backup

./: .gitignore  README.md  bundle.py  config_schema.py  download.py  download.sh  env-schema.sh  export.py  exporter.py  main.py  pyproject.toml  run.sh
src/: check-trash.sh  export-attachments.sh  export-organization.sh  export-vault.sh  functions.sh  main.sh  unlock-vault.sh
src/bw_backup/: __main__.py  config.py  export.py  logging.py  setup_logging.py
utils/: export-attachments.sh  export-organization.sh  export-vault.sh  functions.sh  prepare-export.sh
