[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "bw-backup"
version = "1.0.6"
authors = [
  { name="pschlo", email="author@example.com" },
]
description = "Bitwarden Backup CLI"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "pywarden @ https://github.com/pschlo/pywarden/releases/download/v1.1.5/pywarden-1.1.5.tar.gz"
]


[tool.hatch.build.targets.sdist]
# choose here what to include in sdist
# the wheel will only include src/bw_backup anyway
# see https://discuss.python.org/t/should-sdists-include-docs-and-tests/14578
# include = [ ]
